Fix text align.

--- a/s/css/_styles.css
+++ b/s/css/_styles.css
@@ -815,8 +815,7 @@ header .smedia {
 
 .tagline h2 {
   margin-bottom: 0;
-  padding-top: 15px;
-  padding-bottom: 15px;
+  padding-top: 5px;
 }
 
 .btn-success {
